--- a/index.html
+++ b/index.html
@@ -1,11 +1,148 @@
-<div id="admin-area" class="adm-box">
-        <p style="color:var(--gold); font-size:11px; text-align:center; margin-bottom:8px;">لوحة التحكم الملكية</p>
-        <div style="display:flex; gap:5px;">
-            <button class="adm-btn" style="background:#ff4757; flex:1;" onclick="if(confirm('تنظيف الشات بالكامل؟')) db.ref('chat_v81').remove()">
-                <span>🧹</span> <small>تنظيف</small>
-            </button>
-            <button class="adm-btn" style="background:#ffa502; flex:1;" onclick="toggleLock()">
-                <span id="lock-icon">🔒</span> <small>القفل</small>
-            </button>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>ALLOSH SUPREME V83 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
+        :root { --gold: #ffd700; --bg: #000; --blue: #00d2ff; --red: #ff4757; --orange: #ffa502; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        body { background: var(--bg); color: white; overflow: hidden; height: 100vh; width: 100%; position: fixed; }
+
+        /* الهيدر */
+        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
+        .h-btn { background: none; border: none; font-size: 26px; color: white; cursor: pointer; }
+        .owner-glow { font-weight: 900; background: linear-gradient(to right, #ffd700, #fff, #ffd700); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: shine 2s infinite; }
+        @keyframes shine { to { background-position: 200% center; } }
+
+        /* القوائم الجانبية */
+        .side { position: fixed; top: 0; bottom: 0; width: 290px; background: rgba(10,10,10,0.98); z-index: 9999; backdrop-filter: blur(15px); transition: 0.4s; }
+        #side-r { right: -300px; border-left: 2px solid var(--gold); }
+        #side-l { left: -300px; border-right: 2px solid var(--gold); overflow-y: auto; }
+        .side.active { transform: translateX(0); }
+        #side-r.active { right: 0; } #side-l.active { left: 0; }
+        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
+
+        /* لوحة التحكم الملكية (نفس صورتك) */
+        .adm-box { background: #111; border: 1px solid var(--gold); border-radius: 10px; padding: 10px; margin: 10px; display: none; }
+        .adm-title { color: var(--gold); font-size: 12px; text-align: center; margin-bottom: 10px; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .adm-btn-row { display: flex; gap: 8px; }
+        .adm-btn { flex: 1; padding: 12px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; color: white; display: flex; align-items: center; justify-content: center; gap: 5px; }
+
+        /* الملف الشخصي */
+        .p-top { position: relative; width: 100%; height: 180px; background: #111; }
+        .p-cov { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); }
+        .p-av { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; position: absolute; bottom: 0; right: 20px; }
+
+        /* الشات */
+        #chat-flow { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .bubble { background: rgba(255,255,255,0.07); padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
+
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; }
+        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 12px; color: #fff; padding: 0 15px; }
+    </style>
+</head>
+<body>
+
+<div id="overlay" onclick="closeSides()"></div>
+
+<div class="header">
+    <button class="h-btn" onclick="openSide('side-l')">⚙️</button>
+    <div class="owner-glow" style="font-size:18px;">إمبراطورية علوش</div>
+    <button class="h-btn" onclick="openSide('side-r')">👥</button>
+</div>
+
+<div id="side-r" class="side">
+    <h3 style="padding:20px; text-align:center; color:var(--gold);">🛡️ الإدارة</h3>
+    <div id="admin-area" class="adm-box">
+        <div class="adm-title">لوحة التحكم الملكية</div>
+        <div class="adm-btn-row">
+            <button class="adm-btn" style="background: var(--red);" onclick="clearChat()">🧹 تنظيف</button>
+            <button class="adm-btn" style="background: var(--orange);" onclick="toggleLock()">🔒 القفل</button>
         </div>
     </div>
+    <div id="on-list" style="padding:10px;"></div>
+</div>
+
+<div id="side-l" class="side">
+    <div class="p-top">
+        <img class="p-cov" id="my-cov" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('in-cov').click()">
+        <input type="file" id="in-cov" hidden onchange="upImg(this, 'my-cov')">
+        <img class="p-av" id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('in-av').click()">
+        <input type="file" id="in-av" hidden onchange="upImg(this, 'my-av')">
+    </div>
+    <div style="padding:25px; text-align:center; margin-top:15px;">
+        <h2 class="owner-glow">علوش</h2>
+        <span style="color:gold;">المالك الرسمي</span>
+    </div>
+</div>
+
+<div id="chat-flow"></div>
+
+<div class="footer">
+    <input type="text" id="msg-in" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') pushMsg()">
+    <button onclick="pushMsg()" style="background:var(--gold); color:black; border:none; padding:10px 20px; border-radius:12px; font-weight:900;">إرسال</button>
+</div>
+
+<script>
+    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(config);
+    const db = firebase.database();
+
+    let me = { name: "علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
+
+    // إظهار الإدارة لعلوش فقط
+    if(me.name === "علوش") document.getElementById('admin-area').style.display = 'block';
+
+    function clearChat() { if(confirm("مسح كل الرسائل؟")) db.ref('chat_v83').remove(); }
+    function toggleLock() { db.ref('locked').transaction(l => !l); }
+
+    db.ref('locked').on('value', s => {
+        let locked = s.val();
+        document.getElementById('msg-in').disabled = (locked && me.name !== "علوش");
+        document.getElementById('msg-in').placeholder = locked ? "الشات مغلق 🔒" : "تكلم يا إمبراطور...";
+    });
+
+    function upImg(input, id) {
+        if(input.files && input.files[0]) {
+            let r = new FileReader();
+            r.onload = (e) => { 
+                document.getElementById(id).src = e.target.result;
+                if(id==='my-av') me.img = e.target.result;
+            };
+            r.readAsDataURL(input.files[0]);
+        }
+    }
+
+    function pushMsg() {
+        let i = document.getElementById('msg-in'); if(!i.value || i.disabled) return;
+        db.ref('chat_v83').push({ u: me.name, t: i.value, a: me.img });
+        i.value = "";
+    }
+
+    db.ref('chat_v83').limitToLast(15).on('child_added', s => {
+        let d = s.val(); let isK = d.u === "علوش";
+        let div = document.createElement('div');
+        div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:12px;">
+            <img src="${d.a || me.img}" style="width:38px; height:38px; border-radius:50%; border:1px solid ${isK?'gold':'#333'};">
+            <div class="bubble"><b class="${isK?'owner-glow':''}" style="font-size:12px;">${d.u}</b><br>${d.t}</div>
+        </div>`;
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
+    });
+
+    db.ref('online_v83/' + me.name).set(true);
+    db.ref('online_v83/' + me.name).onDisconnect().remove();
+    db.ref('online_v83').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        s.forEach(u => { l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">${u.key === "علوش" ? '👑' : '👤'} ${u.key}</div>`; });
+    });
+
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+</script>
+</body>
+</html>
